--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb+srv://Vercel-Admin-TrinextGenDb:N3SBwXIko0ILXmp8@trinextgendb.2poyxo2.mongodb.net/tri_next_gen?retryWrites=true&w=majority&authSource=admin
+MONGO_URI=mongodb+srv://Vercel-Admin-TrinextGenDb:N3SBwXIko0ILXmp8@trinextgendb.2poyxo2.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET="your_super_secret_key_that_should_be_long_and_random"
+
+
