--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://Vercel-Admin-TrinextGenDb:K6xIdEv7ISzLjHLV@trinextgendb.2poyxo2.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI=mongodb+srv://Vercel-Admin-TrinextGenDb:K6xIdEv7ISzLjHLV@trinextgendb.2poyxo2.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET="your_super_secret_key_that_should_be_long_and_random"
 
